# jimmbot_middleware

./: .gitignore  CMakeLists.txt  README.md  package.xml
board/: 1-PCB_PCB_2020-07-13_23-52-55.json  1-Schematic_EspRosNodeCAN.json  README.md
can_atmega328p/: CHANGELOG.rst  CMakeLists.txt  Doxyfile  Doxyfile.in  README.md  can_atmega328p.ino
can_atmega328p/src/: can_packt.cpp  can_packt.h  can_packt.hpp  can_wrapper.cpp  can_wrapper.h  can_wrapper.hpp  constants.h  iwheel_controller.cpp  iwheel_controller.h  iwheel_controller.hpp  main.cpp  pin_configuration.h  pin_configuration.hpp  speed_to_pwm.h  stl_helper_functions.h  wheel.cpp  wheel.h  wheel.hpp  wheel_controller.cpp  wheel_controller.h  wheel_controller.hpp
can_atmega328p/src/drivers/: can.h  mcp2515.cpp  mcp2515.h
can_atmega328p/src/drivers/include/: can.h  mcp2515.h  millis.h  spi.h  usart.h
can_atmega328p/src/drivers/src/: mcp2515.cpp  millis.cpp  spi.cpp  usart.cpp
can_esp32/: CHANGELOG.rst  CMakeLists.txt  Makefile  README.md
can_esp32/main/: esp32_ros_interface.cpp  main.cpp
can_esp32/main/include/: esp32_ros_interface.h
firmware/: Makefile  README.md
firmware/main/: esp32_ros_interface.cpp
firmware/main/include/: esp32_ros_interface.h
motor_controller_can_arduino/MotorController/: CMakeLists.txt  MotorController.ino
motor_controller_can_arduino/MotorController/src/: can_wrapper.cpp  can_wrapper.hpp  iwheel_controller.cpp  iwheel_controller.hpp  main.cpp  pin_configuration.hpp  wheel.cpp  wheel.hpp  wheel_controller.cpp  wheel_controller.hpp
motor_controller_can_arduino/MotorController/src/can/: mcp2515.cpp  mcp2515.h
motor_controller_ros_esp32/: CMakeLists.txt  README.md
motor_controller_ros_esp32/main/: CMakeLists.txt  esp32_ros_interface.cpp  main.cpp
motor_controller_ros_esp32/main/include/: esp32_ros_interface.h
ros_lib/: ESP32Hardware.h  esp_ros_wifi.c  esp_ros_wifi.h  ros.h
rosserial_esp32/: make_libraries.py
