<?xml version="1.0"?>
<package format="2">
  <name>jimmbot_esp32_firmware</name>
  <version>0.1.0</version>
  <description>mhRobotics jimmBOT esp32 firmware</description>

  <author email="m.halimi@gmail.com">Mergim Halimi</author>

  <maintainer email="m.halimi@gmail.com">Mergim Halimi</maintainer>

  <url type="website">www.mergimhalimi.com</url>
  <url type="repository">https://github.com/mh-Robotics/jimmbot_esp32_firmware</url>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>jimmbot_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>rosserial_client</exec_depend>
  <exec_depend>rosserial_msgs</exec_depend>

  <export>
  </export>
</package>
